Added base layout and styles for it

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <header class="header">
+            Header part
+        </header>
+        <div class="content">
+            <nav class="sidebar">
+                Navigation
+            </nav>
+            <main class="hotel-view">
+                Hotel view
+            </main>
+        </div>
+    </div>
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 </html>
